unpackaged/main/default/objects/Shipping__c/Shipping__c.object-meta.xml
<CustomObject>
    <label>Shipping</label>
    <nameField>
        <displayFormat>S{YY}{MM}{DD}{0000}</displayFormat>
        <label>Tracking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shippings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>