unpackaged/main/default/objects/Shipping__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Account related to the Shipping order</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shippings</relationshipLabel>
    <relationshipName>Shippings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>