unpackaged/main/default/objects/Shipping__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>