unpackaged/main/default/objects/Shipping__c/fields/Delivery_City__c.field-meta.xml
<CustomField>
    <fullName>Delivery_City__c</fullName>
    <label>Delivery City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>