unpackaged/main/default/objects/Shipping__c/fields/Delivery_Country__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Country__c</fullName>
    <label>Delivery Country</label>
    <length>30</length>
    <type>Text</type>
</CustomField>