unpackaged/main/default/objects/Shipping__c/fields/Delivery_Number__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Number__c</fullName>
    <label>Delivery Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>