unpackaged/main/default/objects/Shipping__c/fields/Delivery_Street__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Street__c</fullName>
    <label>Delivery Street</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>