unpackaged/main/default/objects/Shipping__c/fields/Package_Weight__c.field-meta.xml
<CustomField>
    <fullName>Package_Weight__c</fullName>
    <inlineHelpText>Weight on Kilograms (Kg)</inlineHelpText>
    <label>Package Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>