unpackaged/main/default/objects/Shipping__c/fields/Recipient_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Last_Name__c</fullName>
    <label>Recipient Last Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>