unpackaged/main/default/objects/Shipping__c/fields/Return_City__c.field-meta.xml
<CustomField>
    <fullName>Return_City__c</fullName>
    <label>Return City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>