unpackaged/main/default/objects/Shipping__c/fields/Return_Country__c.field-meta.xml
<CustomField>
    <fullName>Return_Country__c</fullName>
    <label>Return Country</label>
    <length>30</length>
    <type>Text</type>
</CustomField>