unpackaged/main/default/objects/Shipping__c/fields/Return_Number__c.field-meta.xml
<CustomField>
    <fullName>Return_Number__c</fullName>
    <label>Return Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>