unpackaged/main/default/objects/Shipping__c/fields/Return_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Return_Postal_Code__c</fullName>
    <label>Return Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>