unpackaged/main/default/objects/Shipping__c/fields/Return_State__c.field-meta.xml
<CustomField>
    <fullName>Return_State__c</fullName>
    <label>Return State</label>
    <length>30</length>
    <type>Text</type>
</CustomField>