unpackaged/main/default/objects/Shipping__c/fields/Return_Street__c.field-meta.xml
<CustomField>
    <fullName>Return_Street__c</fullName>
    <label>Return Street</label>
    <length>20</length>
    <type>Text</type>
</CustomField>