unpackaged/main/default/objects/Shipping__c/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sender</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <infoMessage>Please be sure that an Account has Contact related</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Shippings</relationshipLabel>
    <relationshipName>Shippings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>