unpackaged/main/default/objects/Shipping__c/fields/Sender_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Sender_First_Name__c</fullName>
    <label>Sender First Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>