unpackaged/main/default/objects/Shipping__c/fields/Sender_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Sender_Last_Name__c</fullName>
    <label>Sender Last Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>