unpackaged/main/default/objects/Shipping__c/recordTypes/Shipping_Order.recordType-meta.xml
<RecordType>
    <fullName>Shipping_Order</fullName>
    <active>true</active>
    <label>Shipping Order</label>
</RecordType>