unpackaged/main/default/objects/Shipping__c/recordTypes/Test.recordType-meta.xml
<RecordType>
    <fullName>Test</fullName>
    <active>false</active>
    <label>Test</label>
</RecordType>